Updated media queries, added correct video

--- a/gncmap/index.html
+++ b/gncmap/index.html
@@ -11,13 +11,13 @@
 	<header class="container-fluid">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-3">
+				<div class="col-xs-3">
 					<a href="http://blenderbottle.com">
 						<div class="logo-bb">
 						</div>
 					</a>
 				</div>
-				<div class="col-sm-3 col-sm-offset-6">
+				<div class="col-xs-3 col-xs-offset-6">
 					<div class="logo-gnc">
 					</div>
 				</div>
@@ -27,11 +27,16 @@
 	<div class="container-fluid">
 		<div class="container">
 			<section id="video" class="row">
+			<div class="col-sm-7 visible-xs-block">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LVMojwJANWE" frameborder="0" allowfullscreen></iframe>
+					</div>
+				</div>
 				<div class="col-sm-5">
 					<div class="row headspace">
 						<div class="side-text">
-							<span style="font-size: 8.25em;">Simple</span><span class="span-inline">.</span>
-							<span style="font-size: 5.7em;">Portable</span><span>.</span>
+							<span class="top-text">Simple</span><span class="span-inline">.</span>
+							<span class="middle-text">Portable</span><span>.</span>
 							<span>Versatile.</span>
 							<span class="small-text">Find a GoStak® in a GNC near you.</span>
 						</div>
@@ -43,9 +48,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-7">
+				<div class="col-sm-7 hidden-xs-block">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/aq0ZnvNm7tU" frameborder="0" allowfullscreen></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LVMojwJANWE" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
 			</section>
