One more update

--- a/gncmap/index.html
+++ b/gncmap/index.html
@@ -48,7 +48,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-7 hidden-xs-block">
+				<div class="col-sm-7 hidden-xs">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LVMojwJANWE" frameborder="0" allowfullscreen></iframe>
 					</div>
