--- a/gncmap/index.html
+++ b/gncmap/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>GNC GoStak Promotion</title>
+	<title>GNC GoStak® Promotion</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
 
@@ -10,14 +10,14 @@
 <body>
 	<header class="container-fluid">
 		<div class="container">
-			<div class="row">
-				<div class="col-xs-3">
+			<div class="row header-row">
+				<div class="col-md-3 col-sm-4 col-xs-12">
 					<a href="http://blenderbottle.com">
 						<div class="logo-bb">
 						</div>
 					</a>
 				</div>
-				<div class="col-xs-3 col-xs-offset-6">
+				<div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-4 hidden-xs">
 					<div class="logo-gnc">
 					</div>
 				</div>
@@ -64,7 +64,6 @@
 				<h3>Take only what you need</h3>
 					<p>The GoStak jars are designed to be sleek and compact, giving you just enough room for your supplements, without invading your gym bag.</p>
 					<p>Heading out of town? Take a hadnful of 150cc jars filled with your post-workout supplements, and you've got an instant recovery shake for every day of the week.</p>
-					<button class="buy-btn btn btn-default" type="button" onclick="">Buy Now</button>
 				</div>
 			</div>
 		</section>
