--- a/opals/index.html
+++ b/opals/index.html
@@ -248,10 +248,10 @@
 								<label for="name">Your Name:</label>
 								<div class="row">
 									<div class="col-sm-6">
-										<input type='text' class="form-control" id="firstName" name="EntryForm[firstName]" placeholder="First Name" onkeyup="checkForm();"/>
+										<input type='text' ng-model="submitForm.firstName" class="form-control" id="firstName" name="EntryForm[firstName]" placeholder="First Name" />
 									</div>
 									<div class="col-sm-6">
-										<input type='text' class="form-control" id="lastName" name="EntryForm[lastName]" placeholder="Last Name" onkeyup="checkForm();"/>
+										<input type='text' ng-model="submitForm.lastName" class="form-control" id="lastName" name="EntryForm[lastName]" placeholder="Last Name" />
 
 									</div>
 								</div>
@@ -259,17 +259,17 @@
 							<div class="form-group">
 								<label for="email">Your Email:</label>
 								<div class="input-group">
-									<input type='email' id="email" name="EntryForm[email]"  class="form-control" placeholder="Enter Email" onkeyup="checkForm()"/>
+									<input type='email' id="email" ng-model="submitForm.email" name="EntryForm[email]"  class="form-control" placeholder="Enter Email" />
 								</div>
 							</div>
 							<div class="form-group termsCheck">
-								<input type="checkbox" onchange="termsCheck(this)" name="EntryForm[termsCheckbox]" id="termsCheckbox" />
+								<input type="checkbox" ng-model="submitForm.terms" name="EntryForm[termsCheckbox]" id="termsCheckbox" />
 								<label for="termsCheckbox">I have read and understood the Terms and Conditions</label>
 								<div class="terms">
 									{{dict("terms")}}
 								</div>
 							</div>
-							<button class="btn btn-primary submitEntry" type='button' disabled='disabled'>Submit</button>
+							<button ng-click="submit()" class="btn btn-primary submitEntry" type='button' ng-disabled='!(submitForm.firstName && submitForm.lastName && submitForm.email && submitForm.terms)'>Submit</button>
 						</form>
 					</div>
 				</div>
