Added domains and hosting section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,19 @@
                             <li><a href="http://jstherightway.org">JS the right way</a></li>
                         </ul>
                     </li>
+                    <li>
+                    <h3>Domains & Hosting</h3>
+                    <ul>
+                    <li><a href="https://howdns.works/episodes/">How DNS Works</a></li>
+                    <li><a href="https://www.name.com/">Name.com - Domain Registrar</a></li>
+                    <li><a href="https://www.namecheap.com/">Namecheap.com - Domain Registrar</a></li>
+                    <li><a href="https://cloudflare.com">Cloudflare.com - Domain management</a></li>
+                    <li><a href="https://pages.github.com/">Github pages - Free hosting with custom domain support</a></li>
+                    <li><a href="http://neocities.org">Neocities - Free hosting - paid custom domains</a></li>
+                    <li><a href="http://firebase.google.com">Firebase - Free hosting, application platform.</a></li>
+                    <li><a href="http://aws.amazon.com/">Amazon Web Service (AWS) - Tons of web service (Use S3 to host your website super cheap)</a></li>
+                    </ul>
+                    </li>
                 </ol>
             </section>
         </div>
