Added Random HTML tags

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li><a href="https://s3-us-west-2.amazonaws.com/ralex93/blog/images/nFJvcqiKTBHsKKfEQ-undefined"><h4>The Web, HTML, CSS</h4></a>
                         <ul>
                             <li><a href="http://codepen.io">Codepen.io - Practice HTML & CSS in your browser</a></li>
+                            <li><a href="https://randomhtmltags.tech/">Random HTML Tags - Learn your HTML tags quickly!</a></li>
                             <li><a href="https://www.codecademy.com/learn/make-a-website">Codecademy - Make a Website course</a></li>
                             <li><a href="https://www.codeschool.com/learn/html-css">Codeschool - HTML/CSS Classes</a></li>
                             <li><a href="http://overapi.com">OverAPI.com - Programming Reference</a></li>
