--- a/about.html
+++ b/about.html
@@ -1,8 +1,12 @@
 <!DOCTYPE>
 <html>
+  <head>
+    <meta charset="UTF-8">
+  </head>
 <body>
 <p>We love Japan 🇯🇵</p>
 GO GO USA!!!!! MERICA!
+<p>We love all the countries!</p>
 </body>
 </html>
 
