--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <ol>
                     <li><a href="https://s3-us-west-2.amazonaws.com/ralex93/blog/images/nFJvcqiKTBHsKKfEQ-undefined"><h4>The Web, HTML, CSS</h4></a>
                         <ul>
+                            <li><a href="http://jgthms.com/web-design-in-4-minutes/">Web Design in 4 Minutes</a></li>
                             <li><a href="http://codepen.io">Codepen.io - Practice HTML & CSS in your browser</a></li>
                             <li><a href="https://randomhtmltags.tech/">Random HTML Tags - Learn your HTML tags quickly!</a></li>
                             <li><a href="https://www.codecademy.com/learn/make-a-website">Codecademy - Make a Website course</a></li>
